<?xml version="1.0"?>
<package format="3">
  <name>cengaver_pose_estimator</name>
  <version>0.0.0</version>
  <description>A package for estimating pose using ArUco markers.</description>
  <maintainer email="kisalp@todo.todo">kisalp</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv_python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
